--- a/ColorControl/ColorControl/Base.lproj/Main.storyboard
+++ b/ColorControl/ColorControl/Base.lproj/Main.storyboard
@@ -18,97 +18,58 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y0s-PF-D7i">
-                                <rect key="frame" x="20" y="26" width="223" height="57"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="OTP for other party:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yFK-ub-W0X">
+                                <rect key="frame" x="20" y="20" width="153" height="21"/>
                                 <animations/>
-                                <fontDescription key="fontDescription" type="system" pointSize="37"/>
-                                <state key="normal" title="Forward"/>
-                                <connections>
-                                    <action selector="forward:" destination="BYZ-38-t0r" eventType="touchDown" id="Mqv-NU-Iny"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r2f-S2-xz9">
-                                <rect key="frame" x="265" y="28" width="181" height="57"/>
-                                <animations/>
-                                <fontDescription key="fontDescription" type="system" pointSize="37"/>
-                                <state key="normal" title="Backward"/>
-                                <connections>
-                                    <action selector="backward:" destination="BYZ-38-t0r" eventType="touchDown" id="zFW-F3-GrW"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G4c-Ke-emZ">
-                                <rect key="frame" x="20" y="91" width="223" height="57"/>
-                                <animations/>
-                                <fontDescription key="fontDescription" type="system" pointSize="37"/>
-                                <state key="normal" title="Left"/>
-                                <connections>
-                                    <action selector="left:" destination="BYZ-38-t0r" eventType="touchDown" id="Tjp-LF-jCj"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZbE-x2-My2">
-                                <rect key="frame" x="265" y="91" width="170" height="57"/>
-                                <animations/>
-                                <fontDescription key="fontDescription" type="system" pointSize="37"/>
-                                <state key="normal" title="Right"/>
-                                <connections>
-                                    <action selector="right:" destination="BYZ-38-t0r" eventType="touchDown" id="FgD-2W-a3B"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0rY-X9-K4X">
-                                <rect key="frame" x="85" y="156" width="92" height="68"/>
-                                <animations/>
-                                <fontDescription key="fontDescription" type="system" pointSize="37"/>
-                                <state key="normal" title="Stop"/>
-                                <connections>
-                                    <action selector="stop:" destination="BYZ-38-t0r" eventType="touchDown" id="QC9-DM-Ttl"/>
-                                </connections>
-                            </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HvG-xk-elm">
-                                <rect key="frame" x="85" y="332" width="431" height="205"/>
-                                <animations/>
-                                <color key="backgroundColor" red="1" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Af-V8-Ra8">
+                                <rect key="frame" x="22" y="49" width="14" height="21"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Status: Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="viC-sy-1kh">
+                                <rect key="frame" x="20" y="123" width="231" height="21"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4iD-Uk-1Hq">
+                                <rect key="frame" x="20" y="78" width="172" height="30"/>
+                                <animations/>
+                                <state key="normal" title="Start pairing: Create OTP"/>
+                                <connections>
+                                    <action selector="enablePairing:" destination="BYZ-38-t0r" eventType="touchUpInside" id="e1P-ZN-Un4"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="G4c-Ke-emZ" firstAttribute="top" secondItem="y0s-PF-D7i" secondAttribute="bottom" constant="8" id="1YD-PO-Asg"/>
-                            <constraint firstItem="r2f-S2-xz9" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="10" id="8PJ-JQ-Eoa"/>
-                            <constraint firstItem="ZbE-x2-My2" firstAttribute="top" secondItem="r2f-S2-xz9" secondAttribute="bottom" constant="6" id="Bg4-Xm-5wB"/>
-                            <constraint firstItem="ZbE-x2-My2" firstAttribute="leading" secondItem="G4c-Ke-emZ" secondAttribute="trailing" constant="22" id="HFK-Hu-ZA4"/>
-                            <constraint firstItem="r2f-S2-xz9" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="6" id="IRc-be-7U7"/>
-                            <constraint firstItem="G4c-Ke-emZ" firstAttribute="top" secondItem="r2f-S2-xz9" secondAttribute="bottom" constant="8" id="Kzo-xC-8s4"/>
-                            <constraint firstItem="0rY-X9-K4X" firstAttribute="top" secondItem="G4c-Ke-emZ" secondAttribute="bottom" constant="8" id="R17-b5-1Z7"/>
-                            <constraint firstItem="G4c-Ke-emZ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="Wwo-Nl-lZq"/>
-                            <constraint firstItem="r2f-S2-xz9" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="XFE-iG-gbk"/>
-                            <constraint firstItem="y0s-PF-D7i" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="Xnd-Zj-0RX"/>
-                            <constraint firstItem="y0s-PF-D7i" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="aBo-w4-5nM"/>
-                            <constraint firstItem="HvG-xk-elm" firstAttribute="top" secondItem="0rY-X9-K4X" secondAttribute="bottom" constant="108" id="aGm-df-2r2"/>
-                            <constraint firstItem="G4c-Ke-emZ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="dtN-qc-5Jt"/>
-                            <constraint firstItem="0rY-X9-K4X" firstAttribute="top" secondItem="ZbE-x2-My2" secondAttribute="bottom" constant="3" id="fdw-Eb-4sp"/>
-                            <constraint firstItem="HvG-xk-elm" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="65" id="hU2-Ve-Wp5"/>
-                            <constraint firstItem="0rY-X9-K4X" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="65" id="hcW-SE-DWG"/>
-                            <constraint firstItem="0rY-X9-K4X" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="234" id="jZh-KC-1re"/>
-                            <constraint firstItem="r2f-S2-xz9" firstAttribute="leading" secondItem="y0s-PF-D7i" secondAttribute="trailing" constant="22" id="lHN-ba-BoE"/>
-                            <constraint firstItem="ZbE-x2-My2" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="181" id="ugD-fd-VNB"/>
+                            <constraint firstItem="4Af-V8-Ra8" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-5" id="1pO-j4-Qqm"/>
+                            <constraint firstItem="4iD-Uk-1Hq" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="CVM-zL-wUf"/>
+                            <constraint firstItem="viC-sy-1kh" firstAttribute="top" secondItem="4iD-Uk-1Hq" secondAttribute="bottom" constant="8" id="DSY-qc-hZK"/>
+                            <constraint firstItem="4Af-V8-Ra8" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="2" id="H7W-y3-Zpo"/>
+                            <constraint firstItem="4iD-Uk-1Hq" firstAttribute="top" secondItem="4Af-V8-Ra8" secondAttribute="bottom" constant="8" id="KB8-xR-nfH"/>
+                            <constraint firstItem="4Af-V8-Ra8" firstAttribute="top" secondItem="yFK-ub-W0X" secondAttribute="bottom" constant="8" id="gmn-Xu-aqd"/>
+                            <constraint firstItem="yFK-ub-W0X" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="6" id="hl1-lo-WA3"/>
+                            <constraint firstItem="viC-sy-1kh" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="qvV-gK-DJG"/>
+                            <constraint firstItem="yFK-ub-W0X" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="uN1-Yh-pLz"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
-                                <exclude reference="Kzo-xC-8s4"/>
-                                <exclude reference="fdw-Eb-4sp"/>
-                                <exclude reference="jZh-KC-1re"/>
-                                <exclude reference="8PJ-JQ-Eoa"/>
-                                <exclude reference="IRc-be-7U7"/>
-                                <exclude reference="ugD-fd-VNB"/>
+                                <exclude reference="1pO-j4-Qqm"/>
                             </mask>
                         </variation>
                     </view>
                     <connections>
-                        <outlet property="colorLabel" destination="HvG-xk-elm" id="aUC-fz-RuE"/>
+                        <outlet property="otpLabel" destination="4Af-V8-Ra8" id="ZJ9-y4-XGq"/>
+                        <outlet property="statusLabel" destination="viC-sy-1kh" id="c0c-xu-tDT"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
